test/force-app/main/default/objects/Sites__c/Sites__c.object-meta.xml
<CustomObject>
    <label>Sites</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>