test/force-app/main/default/objects/Sites__c/fields/Active_Site__c.field-meta.xml
<CustomField>
    <fullName>Active_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Site</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipLabel>Site Snapshots</relationshipLabel>
    <relationshipName>Project_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>