test/force-app/main/default/objects/Sites__c/fields/After_Tax_NPV__c.field-meta.xml
<CustomField>
    <fullName>After_Tax_NPV__c</fullName>
    <inlineHelpText>Results returned from Python analysis.</inlineHelpText>
    <label>After Tax NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>