test/force-app/main/default/objects/Sites__c/fields/Analysis_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Last_Run__c</fullName>
    <label>Analysis Last Run</label>
    <type>DateTime</type>
</CustomField>