test/force-app/main/default/objects/Sites__c/fields/Anchor__c.field-meta.xml
<CustomField>
    <fullName>Anchor__c</fullName>
    <label>Anchor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>