test/force-app/main/default/objects/Sites__c/fields/Annual_Lease_Escalator__c.field-meta.xml
<CustomField>
    <fullName>Annual_Lease_Escalator__c</fullName>
    <label>Annual Lease Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>