test/force-app/main/default/objects/Sites__c/fields/Annual_Lease_Payment__c.field-meta.xml
<CustomField>
    <fullName>Annual_Lease_Payment__c</fullName>
    <label>Annual Lease Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>