test/force-app/main/default/objects/Sites__c/fields/ATIRR__c.field-meta.xml
<CustomField>
    <fullName>ATIRR__c</fullName>
    <inlineHelpText>Results returned from Python analysis.</inlineHelpText>
    <label>ATIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>