test/force-app/main/default/objects/Sites__c/fields/BESS__c.field-meta.xml
<CustomField>
    <fullName>BESS__c</fullName>
    <label>BESS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>