test/force-app/main/default/objects/Sites__c/fields/Class_A_Target_Flip__c.field-meta.xml
<CustomField>
    <fullName>Class_A_Target_Flip__c</fullName>
    <label>Class A Target Flip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>