test/force-app/main/default/objects/Sites__c/fields/Commercial_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Operation_Date__c</fullName>
    <label>Commercial Operation Date</label>
    <type>Date</type>
</CustomField>