test/force-app/main/default/objects/Sites__c/fields/Construction_Start__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start__c</fullName>
    <label>Construction Start</label>
    <type>Date</type>
</CustomField>