test/force-app/main/default/objects/Sites__c/fields/Consultant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Fee__c</fullName>
    <label>Consultant Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>