test/force-app/main/default/objects/Sites__c/fields/Corporate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Discount__c</fullName>
    <label>Corporate Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>