test/force-app/main/default/objects/Sites__c/fields/Corporate_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Overhead__c</fullName>
    <label>Corporate OverheadContract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPA</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>Uncontracted</fullName>
            </value>
            <value>
                <fullName>Operating lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>