test/force-app/main/default/objects/Sites__c/fields/Corporate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Rate__c</fullName>
    <label>Corporate Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>