test/force-app/main/default/objects/Sites__c/fields/Corporate_Rate_Esc__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Rate_Esc__c</fullName>
    <label>Corporate Rate Esc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>