test/force-app/main/default/objects/Sites__c/fields/CS_Customer_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>CS_Customer_Acquisition__c</fullName>
    <label>CS Customer Acquisition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>