test/force-app/main/default/objects/Sites__c/fields/Customer_Management__c.field-meta.xml
<CustomField>
    <fullName>Customer_Management__c</fullName>
    <label>Customer Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>