test/force-app/main/default/objects/Sites__c/fields/Customer_Management_Escalator__c.field-meta.xml
<CustomField>
    <fullName>Customer_Management_Escalator__c</fullName>
    <label>Customer Management Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>