test/force-app/main/default/objects/Sites__c/fields/Degradation__c.field-meta.xml
<CustomField>
    <fullName>Degradation__c</fullName>
    <label>Degradation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>