test/force-app/main/default/objects/Sites__c/fields/Depreciation_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Stamp__c</fullName>
    <label>Depreciation Stamp</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>