test/force-app/main/default/objects/Sites__c/fields/Development_Fee__c.field-meta.xml
<CustomField>
    <fullName>Development_Fee__c</fullName>
    <label>Development Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>