test/force-app/main/default/objects/Sites__c/fields/Energetic_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Energetic_Insurance__c</fullName>
    <label>Energetic Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>