test/force-app/main/default/objects/Sites__c/fields/EPC_Fee__c.field-meta.xml
<CustomField>
    <fullName>EPC_Fee__c</fullName>
    <label>EPC Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>