test/force-app/main/default/objects/Sites__c/fields/Incentive_Structure__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Structure__c</fullName>
    <label>Incentive Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REC</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>