test/force-app/main/default/objects/Sites__c/fields/Interconnection_Costs__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Costs__c</fullName>
    <inlineHelpText>($/Wdc)</inlineHelpText>
    <label>Interconnection Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>