test/force-app/main/default/objects/Sites__c/fields/Inverter_Replacement_Cost_kW__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Replacement_Cost_kW__c</fullName>
    <label>Inverter Replacement Cost ($kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>