test/force-app/main/default/objects/Sites__c/fields/Inverter_Replacement_Year_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Replacement_Year_Frequency__c</fullName>
    <label>Inverter Replacement Year Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>