test/force-app/main/default/objects/Sites__c/fields/ITC_Assumption__c.field-meta.xml
<CustomField>
    <fullName>ITC_Assumption__c</fullName>
    <label>ITC Assumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>