test/force-app/main/default/objects/Sites__c/fields/ITC_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>ITC_Eligibility__c</fullName>
    <label>ITC Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>