test/force-app/main/default/objects/Sites__c/fields/ITC_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>ITC_Term_Years__c</fullName>
    <label>ITC Term (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>