test/force-app/main/default/objects/Sites__c/fields/Land_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Land_Purchase__c</fullName>
    <label>Land Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>