test/force-app/main/default/objects/Sites__c/fields/Legal_Advisory_Transaction_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advisory_Transaction_Fees__c</fullName>
    <label>Legal, Advisory &amp; Transaction Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>