test/force-app/main/default/objects/Sites__c/fields/Mechanical_Completion__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Completion__c</fullName>
    <label>Mechanical Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>