test/force-app/main/default/objects/Sites__c/fields/Merchant_Schedule_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Schedule_Stamp__c</fullName>
    <label>Merchant Schedule Stamp</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>