test/force-app/main/default/objects/Sites__c/fields/Meter_Replacement_Cost_meter__c.field-meta.xml
<CustomField>
    <fullName>Meter_Replacement_Cost_meter__c</fullName>
    <label>Meter Replacement Cost ($/meter)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>