test/force-app/main/default/objects/Sites__c/fields/Number_of_Meters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Meters__c</fullName>
    <label>Number of Meters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>