test/force-app/main/default/objects/Sites__c/fields/of_Interconnection_Points__c.field-meta.xml
<CustomField>
    <fullName>of_Interconnection_Points__c</fullName>
    <description>being used for portal flow</description>
    <label># of Interconnection Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>