test/force-app/main/default/objects/Sites__c/fields/Offtake_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Offtake_Sourced__c</fullName>
    <label>Offtake Sourced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>