test/force-app/main/default/objects/Sites__c/fields/OM_Escalator__c.field-meta.xml
<CustomField>
    <fullName>OM_Escalator__c</fullName>
    <label>O&amp;M Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>