test/force-app/main/default/objects/Sites__c/fields/Operating_Lease1__c.field-meta.xml
<CustomField>
    <fullName>Operating_Lease1__c</fullName>
    <label>Operating Lease?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>