test/force-app/main/default/objects/Sites__c/fields/Operating_Lease__c.field-meta.xml
<CustomField>
    <fullName>Operating_Lease__c</fullName>
    <label>Operating Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>