test/force-app/main/default/objects/Sites__c/fields/Other_Development_Fee__c.field-meta.xml
<CustomField>
    <fullName>Other_Development_Fee__c</fullName>
    <label>Other Development Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>