test/force-app/main/default/objects/Sites__c/fields/Other_Recurring_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Recurring_Expenses__c</fullName>
    <inlineHelpText>Please include any other known annual recurring costs, such as utility maintenance costs, consulting fees, etc.</inlineHelpText>
    <label>Other Annual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>