test/force-app/main/default/objects/Sites__c/fields/Placed_in_Service_Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>Placed_in_Service_Date_Expected__c</fullName>
    <label>Placed in Service Date (Expected)</label>
    <type>Date</type>
</CustomField>