test/force-app/main/default/objects/Sites__c/fields/PPA_Offtaker_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>PPA_Offtaker_Credit_Rating__c</fullName>
    <label>PPA Offtaker Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAA to A-</fullName>
            </value>
            <value>
                <fullName>BBB- to BBB+</fullName>
            </value>
            <value>
                <fullName>BB+ and below</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>