test/force-app/main/default/objects/Sites__c/fields/PPA_Price__c.field-meta.xml
<CustomField>
    <fullName>PPA_Price__c</fullName>
    <label>PPA Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>