test/force-app/main/default/objects/Sites__c/fields/PPA_Price_Escalator__c.field-meta.xml
<CustomField>
    <fullName>PPA_Price_Escalator__c</fullName>
    <label>PPA Price Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>