test/force-app/main/default/objects/Sites__c/fields/PPA_Term__c.field-meta.xml
<CustomField>
    <fullName>PPA_Term__c</fullName>
    <description>for portal project flow</description>
    <label>PPA Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>