test/force-app/main/default/objects/Sites__c/fields/Pre_Flip_Phase_I_Income__c.field-meta.xml
<CustomField>
    <fullName>Pre_Flip_Phase_I_Income__c</fullName>
    <label>Pre-Flip Phase I (Income)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>