test/force-app/main/default/objects/Sites__c/fields/Production_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Production_Scenario__c</fullName>
    <label>Production Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P50</fullName>
            </value>
            <value>
                <fullName>P75</fullName>
            </value>
            <value>
                <fullName>P90</fullName>
            </value>
            <value>
                <fullName>P99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>