test/force-app/main/default/objects/Sites__c/fields/Project_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Project_Acquisition__c</fullName>
    <label>Project Acquisition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>