test/force-app/main/default/objects/Sites__c/fields/Project_level_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_level_Discount_Rate__c</fullName>
    <label>Project level Discount Rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>