test/force-app/main/default/objects/Sites__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Groundmount</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Canopy</fullName>
            </value>
            <value>
                <fullName>GM &amp; RT</fullName>
            </value>
            <value>
                <fullName>GM &amp; CP</fullName>
            </value>
            <value>
                <fullName>RT &amp; CP</fullName>
            </value>
            <value>
                <fullName>GM &amp; RT &amp; CP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>