test/force-app/main/default/objects/Sites__c/fields/Property_Tax_Escalator__c.field-meta.xml
<CustomField>
    <fullName>Property_Tax_Escalator__c</fullName>
    <label>Property Tax Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>