test/force-app/main/default/objects/Sites__c/fields/PTIRR__c.field-meta.xml
<CustomField>
    <fullName>PTIRR__c</fullName>
    <inlineHelpText>Results returned from Python analysis.</inlineHelpText>
    <label>PTIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>