test/force-app/main/default/objects/Sites__c/fields/Re_roofing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Re_roofing_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>($/Wdc)</inlineHelpText>
    <label>Re-roofing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>