test/force-app/main/default/objects/Sites__c/fields/Recurring_Expense_Escalator__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Expense_Escalator__c</fullName>
    <label>Other Expense Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>