test/force-app/main/default/objects/Sites__c/fields/Resi_Discount__c.field-meta.xml
<CustomField>
    <fullName>Resi_Discount__c</fullName>
    <label>Resi Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>