test/force-app/main/default/objects/Sites__c/fields/Residual_Phase_Cash__c.field-meta.xml
<CustomField>
    <fullName>Residual_Phase_Cash__c</fullName>
    <label>Residual Phase (Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>