test/force-app/main/default/objects/Sites__c/fields/Revenue_Name__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Name__c</fullName>
    <label>Revenue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>