test/force-app/main/default/objects/Sites__c/fields/Roofing__c.field-meta.xml
<CustomField>
    <fullName>Roofing__c</fullName>
    <label>Roofing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>