test/force-app/main/default/objects/Sites__c/fields/Seasonality_Quarter_3__c.field-meta.xml
<CustomField>
    <fullName>Seasonality_Quarter_3__c</fullName>
    <label>Seasonality - Quarter 3</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>