test/force-app/main/default/objects/Sites__c/fields/Solver_Result__c.field-meta.xml
<CustomField>
    <fullName>Solver_Result__c</fullName>
    <label>Solver Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>