test/force-app/main/default/objects/Sites__c/fields/SREC_Term__c.field-meta.xml
<CustomField>
    <fullName>SREC_Term__c</fullName>
    <label>SREC Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>