test/force-app/main/default/objects/Sites__c/fields/State_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Region__c</fullName>
    <label>State/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Region</valueSetName>
    </valueSet>
</CustomField>