test/force-app/main/default/objects/Sites__c/fields/Total_DC_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_DC_Size__c</fullName>
    <label>Total DC Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>