test/force-app/main/default/objects/Sites__c/fields/Transaction_Close__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Close__c</fullName>
    <label>Transaction Close</label>
    <type>Date</type>
</CustomField>