test/force-app/main/default/objects/Sites__c/fields/Vacancy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Rate__c</fullName>
    <label>Vacancy Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>