test/force-app/main/default/objects/Sites__c/fields/X15_00_Pre_Flip_Phase_III_Income__c.field-meta.xml
<CustomField>
    <fullName>X15_00_Pre_Flip_Phase_III_Income__c</fullName>
    <label>15.00% Pre-Flip Phase III (Income)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>