test/force-app/main/default/objects/Sites__c/fields/X5_00_Residual_Phase_Income__c.field-meta.xml
<CustomField>
    <fullName>X5_00_Residual_Phase_Income__c</fullName>
    <label>5.00% Residual Phase (Income)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>