test/force-app/main/default/objects/Sites__c/fields/Year_1_Production_kWh__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Production_kWh__c</fullName>
    <description>being used in portal flow</description>
    <label>Year 1 Production (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>