test/force-app/main/default/objects/Sites__c/fields/Year_1_Production_kWh_Formula__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Production_kWh_Formula__c</fullName>
    <formula>Year_One_Specific_Yield__c  *  Total_DC_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 1 Production (kWh) Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>