test/force-app/main/default/objects/Sites__c/fields/Year_One_Specific_Yield__c.field-meta.xml
<CustomField>
    <fullName>Year_One_Specific_Yield__c</fullName>
    <label>Year One Specific Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>