test/force-app/main/default/objects/Sites__c/recordTypes/Snapshot.recordType-meta.xml
<RecordType>
    <fullName>Snapshot</fullName>
    <active>true</active>
    <label>Snapshot</label>
</RecordType>